--- a/components/home/footer.module.scss
+++ b/components/home/footer.module.scss
@@ -3,14 +3,13 @@
   color: #fff;
   text-align: center;
   padding: 25px;
-}
 
-.footer .social-media {
-  margin-bottom: 5px;
-}
-
-.footer .social-media i {
-  font-size: 2rem;
-  margin: 0 5px;
-  color: white;
+  .socialMedia {
+    margin-bottom: 5px;
+    i {
+      font-size: 2rem;
+      margin: 0 5px;
+      color: white;
+    }
+  }
 }
