--- a/components/home/portfolio.module.scss
+++ b/components/home/portfolio.module.scss
@@ -1,57 +1,73 @@
-.portfolio .card img {
-  border-radius: 5px;
-}
+.portfolio {
+  padding: 50px 15px;
 
-.portfolio small {
-  font-style: italic;
-  color: #616161;
-}
-
-.portfolio-links {
-  display: flex;
-  flex-direction: row;
-}
-
-.portfolio-links a {
-  margin-right: 15px;
-  color: #f4494e;
-}
-
-.portfolio-links a:hover {
-  color: #000;
-}
-
-.portfolio-links i {
-  color: #000;
-}
-
-.portfolio .project {
-  margin-top: 50px;
-}
-
-.portfolio .column-right {
-  max-width: 500px;
-  margin: 50px auto 0;
-}
-
-.portfolio .description {
-  margin: 25px 0;
-}
-
-@media only screen and (min-width: 768px) {
   .project {
-    margin-top: 100px;
+    margin-top: 50px;
   }
 
-  .portfolio .column-left {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    padding-right: 100px;
+  .columnLeft {
+    small {
+      font-style: italic;
+      color: #616161;
+    }
+
+    .description {
+      margin: 25px 0;
+    }
+
+    .portfolioLinks {
+      display: flex;
+      flex-direction: row;
+
+      a {
+        margin-right: 15px;
+        color: #f4494e;
+      }
+
+      a:hover {
+        color: #000;
+      }
+
+      i {
+        margin-right: 5px;
+        color: #000;
+      }
+    }
   }
 
-  .portfolio .column-right {
-    width: 50%;
-    margin-top: 0;
+  .columnRight {
+    max-width: 500px;
+    margin: 50px auto 0;
+
+    .card img {
+      border-radius: 5px;
+    }
+  }
+
+  @media only screen and (min-width: 768px) {
+    padding: 100px 25px;
+
+    .container {
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .row {
+      display: flex;
+    }
+
+    .columnLeft {
+      order: 1;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      padding-right: 100px;
+    }
+
+    .columnRight {
+      order: 2;
+      width: 50%;
+      margin-top: 0;
+    }
   }
 }
