--- a/components/home/hero.module.scss
+++ b/components/home/hero.module.scss
@@ -53,10 +53,14 @@
       flex-direction: column;
       width: 60%;
       margin-bottom: unset;
-      /* padding-right: 100px; */
 
       h1 {
-        margin-bottom: 0;
+        margin: 0;
+      }
+
+      h3,
+      p {
+        margin: 16px 0;
       }
     }
 
