--- a/components/home/hero.module.scss
+++ b/components/home/hero.module.scss
@@ -2,7 +2,6 @@
   padding: 25px 15px 50px;
 
   .row {
-    height: 100%;
     display: flex;
     flex-flow: column;
   }
@@ -50,10 +49,14 @@
 
   @media only screen and (min-width: 768px) {
     padding: 120px 25px;
+    height: 100vh;
 
     .container {
       max-width: 1200px;
       margin: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     .row {
@@ -102,9 +105,9 @@
         position: relative;
         margin: auto;
         display: block;
-        width: 30px;
-        height: 50px;
-        border: 2px solid #6e6d7a;
+        width: 20px;
+        height: 40px;
+        border: 2px solid #f0f0f0;
         border-radius: 25px;
       }
 
@@ -114,9 +117,9 @@
         content: '';
         width: 8px;
         height: 8px;
-        background: #6e6d7a;
+        background: #d8d8d8;
         margin-left: -4px;
-        top: 8px;
+        top: 2px;
         border-radius: 4px;
         animation-duration: 1.5s;
         animation-iteration-count: infinite;
