--- a/components/home/hero.module.scss
+++ b/components/home/hero.module.scss
@@ -100,7 +100,8 @@
         height: auto;
       }
     }
-
+  }
+  @media only screen and (min-width: 768px) and (min-height: 768px) {
     .iconScrollContainer {
       .iconScroll {
         position: relative;
