--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,6 +27,12 @@ h2 {
   font-size: 2rem;
 }
 
+button {
+  cursor: pointer;
+  outline: none;
+  border: none;
+}
+
 .btn {
   width: 100%;
   text-align: center;
