--- a/components/home/about.module.scss
+++ b/components/home/about.module.scss
@@ -25,7 +25,7 @@
   }
 
   @media only screen and (min-width: 768px) {
-    padding: 100px 25px;
+    padding: 0 25px;
 
     .container {
       max-width: 1200px;
