--- a/components/home/portfolio.module.scss
+++ b/components/home/portfolio.module.scss
@@ -49,7 +49,7 @@
   }
 
   @media only screen and (min-width: 768px) {
-    padding: 0 25px;
+    padding: 100px 25px 0;
 
     .container {
       max-width: 1200px;
