--- a/components/home/portfolioGallery.module.scss
+++ b/components/home/portfolioGallery.module.scss
@@ -4,7 +4,7 @@
   .buttonWrapper {
     display: flex;
     justify-content: center;
-    padding: 50px;
+    padding: 50px 50px 0;
   }
 
   .galleryWrap {
@@ -46,7 +46,7 @@
   }
 
   @media only screen and (min-width: 768px) {
-    padding: 50px 15px 50px;
+    padding: 50px 15px 0;
 
     .container {
       max-width: 1200px;
