--- a/components/home/portfolio.module.scss
+++ b/components/home/portfolio.module.scss
@@ -71,7 +71,8 @@
     .columnRight {
       order: 2;
       width: 50%;
-      margin-top: 0;
+      margin: 0;
+      margin-left: auto;
     }
   }
 }
