--- a/components/home/blog.module.scss
+++ b/components/home/blog.module.scss
@@ -12,7 +12,7 @@
   .card {
     border-radius: 5px;
     padding: 25px;
-    border: 1px solid #cecece;
+    border: 1px solid var(--border-card);
     margin-bottom: 25px;
 
     h4 {
