--- a/components/home/hero.module.scss
+++ b/components/home/hero.module.scss
@@ -18,7 +18,7 @@
       i {
         font-size: 2rem;
         margin: 0 5px;
-        // color: #fd814d;
+        color: var(--text-secondary);
         filter: drop-shadow(0 1px 1px rgb(0 0 0 / 14%));
       }
     }
@@ -123,7 +123,7 @@
         display: block;
         width: 20px;
         height: 40px;
-        border: 2px solid #f0f0f0;
+        border: 2px solid var(--border-card);
         border-radius: 25px;
       }
 
@@ -133,7 +133,7 @@
         content: '';
         width: 8px;
         height: 8px;
-        background: #d8d8d8;
+        background: var(--text-secondary);
         margin-left: -4px;
         top: 2px;
         border-radius: 4px;
