--- a/components/layout/navbar.module.scss
+++ b/components/layout/navbar.module.scss
@@ -16,7 +16,11 @@
   .logo {
     color: #fff;
     font-weight: bold;
-    background-image: linear-gradient(311deg, #ff8d4d, #f4494e);
+    background-image: linear-gradient(
+      311deg,
+      var(--gradient-primary),
+      var(--gradient-secondary)
+    );
     border-radius: 50px;
     padding: 5px;
     font-size: 1.5rem;
@@ -29,7 +33,7 @@
 
     i {
       font-size: 2.2rem;
-      color: #000;
+      color: var(--text-secondary);
       font-weight: 400;
       padding: 5px;
     }
@@ -39,7 +43,7 @@
     position: fixed;
     top: 0;
     color: red;
-    background-color: hsla(0, 0%, 100%, 0.95);
+    background-color: var(--transparent-primary);
     box-shadow: 0 6px 30px 2px rgb(0 0 0 / 3%), 0 3px 15px 1px rgb(0 0 0 / 2%),
       0 1px 8px 1px rgb(0 0 0 / 1%);
   }
@@ -50,16 +54,16 @@
 
   a {
     font-size: 1.3rem;
-    color: #6e6d7a;
-    border-bottom: 1px solid #f8f8f8;
+    color: var(--text-secondary);
+    border-bottom: 1px solid var(--border);
   }
 
   a:first-child {
-    border-top: 1px solid #f8f8f8;
+    border-top: 1px solid var(--border);
   }
 
   .linkWrapper a:hover {
-    color: #000;
+    color: var(--text-primary);
   }
 
   &.responsive {
@@ -70,7 +74,7 @@
     right: 0;
     top: 65px;
     width: 100%;
-    background-color: hsla(0, 0%, 100%, 0.99);
+    background-color: var(--transparent-secondary);
 
     a {
       display: block;
