--- a/components/modal/modal.module.scss
+++ b/components/modal/modal.module.scss
@@ -11,7 +11,7 @@
 .contactModal,
 .projectModal {
   border-radius: 5px;
-  background-color: white;
+  background-color: var(--background);
   padding: 1rem;
   overflow: auto;
   z-index: 3;
@@ -39,14 +39,16 @@
 
     input,
     textarea {
+      color: var(--text-primary);
+      background-color: transparent;
       width: 100%;
       border: none;
-      border-bottom: 1px solid #d0ced6;
+      border-bottom: 1px solid var(--text-secondary);
     }
 
     textarea {
       width: 100%;
-      border: 1px solid #d0ced6;
+      border: 1px solid var(--text-secondary);
       border-radius: 5px;
     }
 
@@ -69,7 +71,7 @@
 
     i {
       font-size: 3.4rem;
-      color: #ff8d4d;
+      color: var(--text-primary);
     }
 
     .sendLink {
@@ -116,16 +118,16 @@
       .modalLinks {
         a {
           margin-right: 15px;
-          color: #f4494e;
+          color: var(--accent);
         }
 
         a:hover {
-          color: #000;
+          color: var(--text-primary);
         }
 
         i {
           margin-right: 5px;
-          color: #000;
+          color: var(--text-primary);
         }
       }
 
