--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,43 @@
+:root {
+  --background: white;
+  --text-primary: black;
+  --text-secondary: #6e6d7a;
+  --accent: #f4494e;
+  --transparent-primary: #fffffff2;
+  --transparent-secondary: #fffffffc;
+  --border: #f8f8f8;
+  --border-card: #cecece;
+  --button-color: #fd814d;
+  --button-border: #fd814d;
+  --gradient-primary: #ff8d4d;
+  --gradient-secondary: #f4494e;
+}
+[data-theme='dark'] {
+  --background: #242729;
+  --text-primary: white;
+  --text-secondary: #efe3cf;
+  --accent: #ff787e;
+  --transparent-primary: #242729f2;
+  --transparent-secondary: #242729fc;
+  --border: #4b5154;
+  --border-card: #4b5154;
+  --button-color: #ffc478;
+  --button-border: #e74703;
+  --gradient-primary: #ed5600;
+  --gradient-secondary: #ec0f15;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+.app {
+  color: var(--text-primary);
+  background-color: var(--background);
 }
 
 * {
@@ -43,14 +77,18 @@ button {
 }
 
 .btn-outlined {
-  background-color: #fff;
-  color: #fd814d;
-  border: 1px solid #fd814d;
+  background-color: transparent;
+  color: var(--button-color);
+  border: 1px solid var(--button-border);
 }
 
 .btn-filled {
   color: #fff;
-  background-image: linear-gradient(90deg, #ff8d4d, #f4494e);
+  background-image: linear-gradient(
+    90deg,
+    var(--gradient-primary),
+    var(--gradient-secondary)
+  );
 }
 
 @media only screen and (min-width: 480px) {
