--- a/components/posts/posts.module.scss
+++ b/components/posts/posts.module.scss
@@ -18,6 +18,10 @@
     h4 {
       margin: 0;
     }
+
+    a {
+      color: var(--accent);
+    }
   }
 
   @media only screen and (min-width: 768px) {
