--- a/components/home/hero.module.scss
+++ b/components/home/hero.module.scss
@@ -9,6 +9,10 @@
   .columnLeft {
     order: 2;
 
+    h1 {
+      color: var(--text-secondary);
+    }
+
     span {
       position: relative;
       top: 1px;
