--- a/components/posts/post-detail/postContent.module.scss
+++ b/components/posts/post-detail/postContent.module.scss
@@ -1,6 +1,13 @@
 .postContent {
   padding: 50px 15px;
 
+  h1,
+  h2,
+  h3,
+  h4 {
+    color: var(--text-secondary);
+  }
+
   a {
     color: var(--accent);
   }
