Fix CSS; Update description

--- a/components/home/portfolio.module.scss
+++ b/components/home/portfolio.module.scss
@@ -17,7 +17,7 @@
 
     small {
       font-style: italic;
-      color: var(--text-secondary);
+      color: var(--text-tertiary);
     }
 
     .description {
