--- a/components/home/hero.module.scss
+++ b/components/home/hero.module.scss
@@ -22,8 +22,12 @@
       i {
         font-size: 2rem;
         margin: 0 5px;
-        color: var(--text-secondary);
+        color: var(--text-tertiary);
         filter: drop-shadow(0 1px 1px rgb(0 0 0 / 14%));
+
+        &:hover {
+          color: var(--text-secondary);
+        }
       }
     }
     .ctaButtons {
