--- a/components/posts/post-detail/postContent.module.scss
+++ b/components/posts/post-detail/postContent.module.scss
@@ -34,6 +34,10 @@
     margin-bottom: 50px;
   }
 
+  pre {
+    font-size: 0.8rem;
+  }
+
   @media only screen and (min-width: 768px) {
     padding: 100px 25px;
     .container {
