Update modal; Update images; Conditional links

--- a/components/modal/modal.module.scss
+++ b/components/modal/modal.module.scss
@@ -11,7 +11,7 @@
 .contactModal,
 .projectModal {
   border-radius: 5px;
-  background-color: var(--background);
+  background-color: var(--background-card);
   padding: 1rem;
   overflow: auto;
   z-index: 3;
@@ -124,12 +124,14 @@
 }
 
 .projectModal {
+  text-align: center;
   width: 90%;
 
   .main {
     .projectRow {
       .image {
         text-align: center;
+        align-items: center;
       }
 
       .modalLinks {
@@ -147,9 +149,6 @@
           color: var(--text-primary);
         }
       }
-
-      // .description {
-      // }
     }
 
     .flowchart {
@@ -163,24 +162,17 @@
     .main {
       .projectRow {
         display: flex;
+        flex-direction: column;
         margin-bottom: 50px;
 
         .image {
           display: flex;
           flex-direction: column;
-          align-items: flex-end;
-          order: 2;
-          width: 50%;
+          margin-bottom: 25px;
 
           .modalLinks {
             display: flex;
           }
-        }
-
-        .description {
-          order: 1;
-          width: 50%;
-          margin-right: 25px;
         }
       }
 
