--- a/components/slider/slider.module.scss
+++ b/components/slider/slider.module.scss
@@ -1,15 +1,8 @@
 .slider {
   position: relative;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.image {
-  width: 1000px;
-  height: 600px;
-  border-radius: 10px;
 }
 
 .right-arrow {
@@ -17,7 +10,7 @@
   top: 50%;
   right: 32px;
   font-size: 3rem;
-  color: #000;
+  color: var(--border-card);
   z-index: 10;
   cursor: pointer;
   user-select: none;
@@ -28,7 +21,7 @@
   top: 50%;
   left: 32px;
   font-size: 3rem;
-  color: #000;
+  color: var(--border-card);
   z-index: 10;
   cursor: pointer;
   user-select: none;
@@ -36,11 +29,10 @@
 
 .slide {
   opacity: 0;
-  transition-duration: 1s ease;
+  transition-duration: 500ms ease;
 }
 
 .slide.active {
   opacity: 1;
-  transition-duration: 1s;
-  transform: scale(1.08);
+  transition-duration: 500ms;
 }
