--- a/components/home/about.module.scss
+++ b/components/home/about.module.scss
@@ -1,22 +1,26 @@
 .about {
   padding: 50px 15px;
 
+  a {
+    color: var(--accent);
+  }
+
   .row {
     margin-top: 50px;
   }
 
   .columnLeft {
+    margin-bottom: 50px;
+
     p {
       margin: 10px 0;
     }
   }
 
   .columnRight {
-    &.profilePic {
-      max-width: 350px;
-      max-height: 350px;
-      text-align: center;
-      margin: auto;
+    .imageContainer {
+      display: flex;
+      justify-content: center;
 
       img {
         border-radius: 50%;
@@ -24,7 +28,7 @@
     }
   }
 
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 1000px) {
     padding: 100px 25px;
 
     .container {
@@ -38,14 +42,15 @@
 
     .columnLeft {
       align-self: center;
-      width: 60%;
+      width: 40%;
       display: flex;
       flex-direction: column;
       padding-right: 100px;
+      margin-bottom: 0;
     }
 
     .columnRight {
-      width: 40%;
+      width: 60%;
       margin: auto;
 
       img {
